added partners images

--- a/index.html
+++ b/index.html
@@ -45,6 +45,49 @@
     <section class="secondary-contents">
         <section class="partners-wrapper">
             <h5>Our partners</h5>
+            <div class="partners-img-wrapper">
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-leaware.png" alt="Leaware logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-cloudprimero.png" alt="cloudprimero logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-brighter.png" alt="brighter logo" />
+                </div>
+            </div>
+
+            <div class="partners-img-wrapper">
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-frischluft.png" alt="frischluft logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-heynink.png" alt="heynink logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-kato.png" alt="kato logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-mvp.png" alt="mvp logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-tonik.png" alt="tonik logo" />
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/now-logo.png" alt="<div class="partners-img-wrapper">
+                </div>
+
+                <div class="partner-img-wrapper">
+                    <img src="./images/logos/logo-tonik.png" alt="now logo" />
+                </div>
+            </div>
         </section>
     
         <section class="goals-wrapper">
