add social icons image

--- a/index.html
+++ b/index.html
@@ -421,14 +421,18 @@
                     <h4>See who we are</h4>
                     <div class="link-wrapper">
                         <div class="link-img-wrapper">
-                            <div class="link-img"></div>
+                            <div class="link-img">
+                                <img src="./images/logos/linkedin.svg" alt="linkedin"/>
+                            </div>
                         </div>
                         <h5>LinkedIn</h5>
                     </div>
 
                     <div class="link-wrapper">
                         <div class="link-img-wrapper">
-                            <div class="link-img"></div>
+                            <div class="link-img">
+                                <img src="./images/logos/linkedin.svg" alt="linkedin"/>
+                            </div>
                         </div>
                         <h5>Xing</h5>
                     </div>
