added mobile navigation

--- a/index.html
+++ b/index.html
@@ -20,8 +20,27 @@
                 <li><a href="#">About us</a></li>
                 <li><a class="get-button" href="#">Get in touch</a></li>
             </ul>
+
+            <div class="menu-icon">
+                <img src="./images/Menu.svg" alt="" />
+            </div>
         </nav>
     </section>
+
+    <section class="mobile-navigation">
+        <img class="close-btn" src="./images/close.svg" alt="close-icon" />
+        <nav>
+            <ul>
+                <li><a href="#">neoVision</a></li>
+                <li><a href="#">neoVenture</a></li>
+                <li><a href="#">neoBoost</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a class="get-button" href="#">Get in touch</a></li>
+            </ul>
+        </nav>
+    </section>
+
+    <div class="overlay"></div>
 
     <section class="hero-wrapper">
         <div class="hero-contents">
